--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ body {
 	padding: 15px;
 	border-radius: 25px;
 	background-image: url(./images/pattern-confetti-2x.jpg);
+	background-size: cover;
 	text-align: center;
 }
 .info {
